>Menu displayed with proper items and font